--- a/src/app/my-works/project/project.component.css
+++ b/src/app/my-works/project/project.component.css
@@ -33,6 +33,12 @@ nav {
     z-index: 4;
 }
 
+.disabled {
+    pointer-events: none;
+    filter: grayscale(80%);
+    opacity: 0.5;
+}
+
 .title {
     margin-top: 60px;
     text-align: left;
@@ -104,7 +110,7 @@ nav {
                     .detail-type {
                         white-space: nowrap;
                         font: 400 16px Inter, sans-serif;
-                        color: #6C6C6C;
+                        color: #979797;
                         width: 90px;
                     }
 
@@ -147,9 +153,31 @@ nav {
     width: 100%;
     height: 100%;
     align-items: flex-end;
-    
+
     img {
         width: 100%;
         height: auto;
     }
+}
+
+.project-description {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin-top: 8%;
+
+    p {
+        width: 80%;
+        text-align: justify;
+        font: 400 25px Inter, sans-serif;
+        color: black;
+        line-height: 1.3em;
+
+        img {
+            width: 20px;
+            height: 20px;
+            margin-right: 7em;
+        }
+    }
+
 }
