--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,11 @@
         < Open for any <br />
         collaborations and offers />
     </div>
+    <div class="brand">
+        <a href="/home">
+            ☀
+        </a>
+    </div>
     <div class="header-txt">
         Folio
         <br />
