--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,10 +23,10 @@
     <nav>
       <app-navbar></app-navbar>
     </nav>
-    <img loading="lazy" src="../../assets/img/home-girl.gif" class="img" />
-    <footer>
-      <p>just an ordinary designer</p>
-    </footer>
+    <div class="image">
+      <img loading="lazy" src="../../assets/img/home-girl.gif" class="img"/>
+    </div>
+    <p class="footer">just an ordinary designer</p>
   </div>
 </body>
 
