--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,29 +1,64 @@
 <body>
     <nav id="nav">
-        <ul class="nav-list" id="nav-list" (mouseout)="handleUnhover()">
-            <li class="nav-item" id="nav-item-work" (mouseenter)="onNavItemHover('nav-item-work')">
+        <ul class="nav-list" id="nav-list">
+            <li class="nav-item" id="nav-item-work">
                 <a href="/works" class="nav-link">
                     <div class="nav-item-number">01</div>
                     <div class="nav-item-title">Works</div>
                 </a>
+                <div class="title">
+                    <div class="txt-start">
+                      <span>W</span>
+                    </div>
+                    <div class="txt-end">
+                      <span>o</span>
+                      <span>r</span>
+                      <span>k</span>
+                      <span>s</span>
+                    </div>
+                  </div>
             </li>
             <li class="nav-item">
                 <a href="/about" class="nav-link">
                     <div class="nav-item-number">02</div>
                     <div class="nav-item-title">About</div>
                 </a>
+                <div class="title">
+                    <div class="txt-start">
+                        A
+                    </div>
+                    <div class="txt-end">
+                        bout
+                    </div>
+                </div>
             </li>
             <li class="nav-item">
                 <a href="/playground" class="nav-link">
                     <div class="nav-item-number">03</div>
                     <div class="nav-item-title">Playground</div>
                 </a>
+                <div class="title">
+                    <div class="txt-start">
+                        P
+                    </div>
+                    <div class="txt-end">
+                        layground
+                    </div>
+                </div>
             </li>
             <li class="nav-item">
                 <a href="/contact" class="nav-link">
                     <div class="nav-item-number">04</div>
                     <div class="nav-item-title">Contact</div>
                 </a>
+                <div class="title">
+                    <div class="txt-start">
+                        C
+                    </div>
+                    <div class="txt-end">
+                        ontact
+                    </div>
+                </div>
             </li>
         </ul>
         <div class="nav-copyright">©2023</div>
