--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,7 @@
         collaborations and offers />
     </div>
     <div class="brand">
-        <a href="/home">
-            ☀
-        </a>
+        <a href="/home">☀</a>
     </div>
     <div class="header-txt">
         Folio
