--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,15 +8,15 @@
                 </a>
                 <div class="title">
                     <div class="txt-start">
-                      <span>W</span>
+                        <span>W</span>
                     </div>
                     <div class="txt-end">
-                      <span>o</span>
-                      <span>r</span>
-                      <span>k</span>
-                      <span>s</span>
+                        <span>o</span>
+                        <span>r</span>
+                        <span>k</span>
+                        <span>s</span>
                     </div>
-                  </div>
+                </div>
             </li>
             <li class="nav-item">
                 <a href="/about" class="nav-link">
@@ -25,10 +25,13 @@
                 </a>
                 <div class="title">
                     <div class="txt-start">
-                        A
+                        <span>A</span>
                     </div>
                     <div class="txt-end">
-                        bout
+                        <span>b</span>
+                        <span>o</span>
+                        <span>u</span>
+                        <span>t</span>
                     </div>
                 </div>
             </li>
@@ -39,10 +42,18 @@
                 </a>
                 <div class="title">
                     <div class="txt-start">
-                        P
+                        <span>P</span>
                     </div>
                     <div class="txt-end">
-                        layground
+                        <span>l</span>
+                        <span>a</span>
+                        <span>y</span>
+                        <span>g</span>
+                        <span>r</span>
+                        <span>o</span>
+                        <span>u</span>
+                        <span>n</span>
+                        <span>d</span>
                     </div>
                 </div>
             </li>
@@ -53,10 +64,15 @@
                 </a>
                 <div class="title">
                     <div class="txt-start">
-                        C
+                        <span>C</span>
                     </div>
                     <div class="txt-end">
-                        ontact
+                        <span>o</span>
+                        <span>n</span>
+                        <span>t</span>
+                        <span>a</span>
+                        <span>c</span>
+                        <span>t</span>
                     </div>
                 </div>
             </li>
