--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,6 +4,10 @@ header {
     padding: 30px;
 }
 
+header > * {
+    width: 12%;
+}
+
 .header-txt {
     color: #000;
     text-align: right;
@@ -11,14 +15,13 @@ header {
 }
 
 .brand {
-    width: 95%;
-    position: absolute;
+    font-size: 30px;
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    align-items: center;
 
     a {
-        text-decoration: none;
         color: black;
+        text-decoration: none;
     }
 }
