--- a/src/app/my-works/project/project.component.css
+++ b/src/app/my-works/project/project.component.css
@@ -88,6 +88,11 @@ nav {
             }
         }
 
+        .project-description,
+        .project-images {
+            transition: transform 1300ms ease-in-out;
+        }
+
         .project-details {
             padding: 0px 50px;
             height: 100%;
