--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,1 +1,36 @@
-<p>playground works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Playground</title>
+</head>
+
+<body>
+    <div class="playground">
+        <header>
+            <app-header></app-header>
+        </header>
+        <div class="title">
+            <div class="txt-my">
+                P
+            </div>
+            <div class="txt-section">
+                layground
+            </div>
+        </div>
+        <nav>
+            <app-navbar></app-navbar>
+        </nav>
+        <div class="info">
+            <p>
+                Step into my creative haven, where I showcase an eclectic mix of designs, explorations, discarded concepts, and everything that hasn't found its spotlight elsewhere. This is my playground, a glimpse into the diverse array of creations that make up my personal collection.
+            </p>
+        </div>
+        <p class="fix">I'm currently working on this section, visit me again soon!</p>
+        <p class="footer">just an ordinary designer</p>
+    </div>
+</body>
+
+</html>
