--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,31 @@
-<p>contact works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+</head>
+
+<body>
+    <div class="contact">
+        <header>
+            <app-header></app-header>
+        </header>
+        <div class="title">
+            <div class="txt-my">
+                C
+            </div>
+            <div class="txt-section">
+                ontact
+            </div>
+        </div>
+        <nav>
+            <app-navbar></app-navbar>
+        </nav>
+        <p class="fix">I'm currently working on this section, visit me again soon!</p>
+        <p class="footer">just an ordinary designer</p>
+    </div>
+</body>
+
+</html>
