--- a/src/app/my-works/project/project.component.html
+++ b/src/app/my-works/project/project.component.html
@@ -72,10 +72,10 @@
           </p>
         </div>
         <section class="project-images" *ngIf="project.images.length > 0">
-          <div class="images" [ngClass]="{ 'active': currentImageIndex >= 0 }">
+          <div [@imageSlide]="currentImageIndex" class="images" [ngClass]="{ 'active': currentImageIndex >= 0 }">
             <img *ngIf="currentImageIndex >= 0" [src]="project.images[currentImageIndex]" alt="image">
           </div>
-        </section>        
+        </section>
       </section>
     </section>
   </div>
