--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,18 +13,41 @@
             <app-header></app-header>
         </header>
         <div class="title">
-            <div class="txt-my">
-                C
+            <div class="txt-start">
+                Let's collaborate
             </div>
-            <div class="txt-section">
-                ontact
+            <div class="txt-end">
+                and create together
             </div>
         </div>
         <nav>
             <app-navbar></app-navbar>
         </nav>
-        <p class="fix">I'm currently working on this section, visit me again soon!</p>
-        <p class="footer">just an ordinary designer</p>
+        <div class="contact-content">
+            <div class="contact-info">
+                <div class="contact-info-section">
+                    <p class="contact-info-section-title">Social</p>
+                    <div class="contact-info-section-info">
+                        <p class="contact-info-section-info-txt"><a href="https://www.linkedin.com/in/sol-andrade/">Linkedin</a></p>
+                    </div>
+                </div>
+                <div class="contact-info-section">
+                    <p class="contact-info-section-title">Email</p>
+                    <div class="contact-info-section-info">
+                        <p class="contact-info-section-info-txt">solnicandrade@gmail.com</p>
+                    </div>
+                </div>
+                <div class="contact-info-section">
+                    <p class="contact-info-section-title">Code</p>
+                    <div class="contact-info-section-info">
+                        <p class="contact-info-section-info-txt"><a href="https://github.com/SolAndrade">Github</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img loading="lazy" src="../../assets/img/home-girl.gif" class="img"/>
+            </div>
+        </div>
     </div>
 </body>
 
