--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -19,6 +19,7 @@ body {
 
 header {
     width: 100%;
+    margin-bottom: auto;
 }
 
 header,
@@ -32,41 +33,62 @@ nav {
 }
 
 .title {
-    gap: 20px;
     display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    margin-top: 6%;
+
+    .txt-start {
+        color: #000;
+        text-align: center;
+        font: 400 120px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
+            sans-serif;
+        margin-bottom: -20px;
+    }
+
+    .txt-end {
+        margin-top: -20px;
+        color: #000;
+        text-align: center;
+        letter-spacing: -4.8px;
+        font: 400 100px Inter, sans-serif;
+    }
 }
 
-.txt-my {
-    color: #000;
-    text-align: center;
-    letter-spacing: -9px;
-    font: 400 220px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
-        sans-serif;
-}
 
-.txt-section {
-    padding-top: 20px;
-    color: #000;
-    text-align: center;
-    letter-spacing: -4.8px;
-    white-space: nowrap;
-    margin: auto 0;
-    font: 400 200px Inter, sans-serif;
-}
-
-.fix {
-    margin-top: 20%;
+.contact-content {
     display: flex;
-    justify-content: center;
-    text-align: center;
-    font: 400 16px Inter, sans-serif;
-    color: black;
-}
-
-.footer {
     width: 100%;
-    font: 300 14px Inter, sans-serif;
-    display: flex;
-    justify-content: center;
-    margin-top: auto;
+    justify-content: space-between;
+
+    .contact-info {
+        padding-top: 100px;
+
+        margin-left: 50px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px 45%;
+        row-gap: 20px;
+
+        .contact-info-section {
+            display: flex;
+            gap: 120px;
+
+            .contact-info-section-title {
+                color: var(--contact-section, #6c6c6c);
+                font: 400 14px Inter, sans-serif;
+            }
+
+            .contact-info-section-info {
+
+                .contact-info-section-info-txt,
+                .contact-info-section-info-txt a {
+                    color: var(--contact-info, #000);
+                    font: 400 14px Inter, sans-serif;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
