--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -91,6 +91,8 @@ nav:hover .nav-item-title {
   font: 400 12px Inter, sans-serif;
 }
 
+/* ---------- Section title animation ---------- */
+
 .title {
   display: none;
   width: 100%;
@@ -131,43 +133,41 @@ nav:hover .nav-item-title {
   animation-delay: 0s;
 }
 
+.txt-end span:nth-child(1) {
+  animation-delay: 0.05s;
+}
+
 .txt-end span:nth-child(2) {
-  animation-delay: 0.16s;
+  animation-delay: 0.1s;
 }
 
 .txt-end span:nth-child(3) {
-  animation-delay: 0.24s;
+  animation-delay: 0.15s;
 }
 
 .txt-end span:nth-child(4) {
-  animation-delay: 0.32s;
+  animation-delay: 0.20s;
 }
 
 .txt-end span:nth-child(5) {
-  animation-delay: 0.40s;
+  animation-delay: 0.25s;
 }
 
 .txt-end span:nth-child(6) {
-  animation-delay: 0.48s;
+  animation-delay: 0.30s;
 }
 
 .txt-end span:nth-child(7) {
-  animation-delay: 0.56s;
+  animation-delay: 0.35s;
 }
 
 .txt-end span:nth-child(8) {
-  animation-delay: 0.64s;
+  animation-delay: 0.40s;
 }
 
 .txt-end span:nth-child(9) {
-  animation-delay: 0.72s;
+  animation-delay: 0.45s;
 }
-
-.txt-end span:nth-child(1) {
-  animation-delay: 0.08s;
-}
-
-
 
 @keyframes appear {
   to {
@@ -186,12 +186,12 @@ nav:hover .nav-item-title {
 }
 
 .nav-item:not(:hover) .title {
-  visibility: hidden; /* Hide the element but keep the space */
-  opacity: 0; /* Make the element transparent */
-  display: flex; /* Keep the display property to ensure the animation runs */
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
 }
 
 .nav-item:not(:hover) .txt-start span,
 .nav-item:not(:hover) .txt-end span {
-  animation-name: disappear;
+  animation: dissapear 0.5s backwards ease-in-out;
 }
