--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <body>
     <nav id="nav">
         <ul class="nav-list" id="nav-list">
-            <li class="nav-item" id="nav-item-work">
+            <li class="nav-item" id="nav-item-work" (mouseenter)="onHover()" (mouseleave)="onLeave()" [class.nav-hovered]="isHovered">
                 <a href="/works" class="nav-link">
                     <div class="nav-item-number">01</div>
                     <div class="nav-item-title">Works</div>
