--- a/src/app/my-works/my-works.component.html
+++ b/src/app/my-works/my-works.component.html
@@ -8,11 +8,20 @@
 </head>
 
 <body>
+    <!--<div class="transition">
+        <div class="title-transition">
+            <div class="txt-my-transition">
+                W
+            </div>
+            <div class="txt-section-transition">
+                orks
+            </div>
+        </div>
+    </div>-->
     <div class="works">
         <header>
             <app-header></app-header>
         </header>
-        <!--<div class="title" [@titleAnimation] #titleContainer>-->
         <div class="title">
             <div class="txt-my">
                 {{ titleBegin }}
@@ -54,54 +63,3 @@
 </body>
 
 </html>
-
-<!--<div class="works-index">
-    <nav>
-        <ul class="nav-list">
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="date" style="color: #000">2023</div>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="date">2022</div>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <div class="date">2021</div>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <div class="works-2023">
-        <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
-            <div class="work-preview-item">
-                <a href="42OpenCyber">
-                    <img loading="lazy" src="../../assets/img/works/works-preview/42OpenCyber.png" class="img ftOpenCyber" id="img1"
-                        (mouseover)="handleHover('img1')" />
-                </a>
-            </div>
-            <div class="work-preview-item">
-                <a href="openTechies">
-                    <img loading="lazy" src="../../assets/img/works/works-preview/OpenTechies.png" class="img openTechies" id="img2"
-                        (mouseover)="handleHover('img2')" />
-                </a>
-            </div>
-            <div class="work-preview-item">
-                <a href="fireWatcher">
-                    <img loading="lazy" src="../../assets/img/works/works-preview/FireWatcher.png" class="img fireWatcher" id="img3"
-                        (mouseover)="handleHover('img3')" />
-                </a>
-            </div>
-            <div class="work-preview-item">
-                <a href="hickathon">
-                    <img loading="lazy" src="../../assets/img/works/works-preview/Hickathon.png" class="img hickathon" id="img4"
-                        (mouseover)="handleHover('img4')" />
-                </a>
-            </div>
-        </div>
-        <div class="projects-nbr">4 projects</div>
-    </div>
-</div>-->
