--- a/src/app/my-works/my-works.component.css
+++ b/src/app/my-works/my-works.component.css
@@ -14,12 +14,7 @@ body {
     justify-content: center;
     height: 100vh;
     box-sizing: border-box;
-}
-
-.works-index {
-    display: flex;
-    align-items: flex-start;
-    padding-left: 50px;
+    overflow: hidden;
 }
 
 header {
@@ -68,40 +63,24 @@ nav {
 }
 
 .works-index {
+    display: flex;
+    align-items: flex-start;
+    padding-left: 50px;
     bottom: 0;
     position: absolute;
+
+    .works-year {
+        align-self: left;
+        margin: 0px 60px 10px 0px;
+        padding: 0;
+        position: relative;
+    
+        .works-year-txt {
+            font: 400 16px Inter, sans-serif;
+        }
+    }
 }
 
-.nav-dates {
-    align-self: start;
-    display: flex;
-    margin-top: 76px;
-    width: 283px;
-    max-width: 100%;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.nav-list {
-    align-items: center;
-    list-style: none;
-    display: flex;
-    margin: 30px 0px 0px;
-    padding: 0;
-}
-
-.nav-item {
-    margin-right: 30px;
-}
-
-
-.works-year {
-    align-self: left;
-    height: 320px;
-    margin: 30px 60px 10px 0px;
-    padding: 0;
-    position: relative;
-}
 
 .works-preview {
     align-self: stretch;
