--- a/src/app/my-works/my-works.component.html
+++ b/src/app/my-works/my-works.component.html
@@ -35,6 +35,7 @@
         </nav>
         <div class="works-index">
             <div class="works-year">
+                <p class="works-year-txt">2023</p>
                 <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
                     <div *ngFor="let project of projects2023" class="work-preview-item">
                         <a [routerLink]="['/projects', project.titleHeading]">
@@ -46,7 +47,8 @@
                     <div class="projects-nbr">{{ projects2023.length }} projects</div>
                 </div>
             </div>
-            <div class="works-year">
+            <div class="works-year" *ngIf="projects2022.length > 0">
+                <p class="works-year-txt">2022</p>
                 <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
                     <div *ngFor="let project of projects2022" class="work-preview-item">
                         <a [routerLink]="['/projects', project.titleHeading]">
