--- a/src/app/my-works/project/project.component.css
+++ b/src/app/my-works/project/project.component.css
@@ -64,7 +64,7 @@ nav {
                 padding: 0;
 
                 p {
-                    letter-spacing: -9px;
+                    letter-spacing: 0px;
                     font: 400 110px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
                         sans-serif;
                     margin: 0;
@@ -96,7 +96,7 @@ nav {
         .project-details {
             padding: 0px 50px;
             height: 100%;
-            margin-top: 120px;
+            margin-top: 26%;
 
             img {
                 max-height: 250px;
