--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -23,7 +23,12 @@
         <nav>
             <app-navbar></app-navbar>
         </nav>
-        <p class="fix">I'm currently working on this section, visit me again soon!</p>
+        <div class="info">
+            <a href="../../assets/data/CV Sol Andrade.pdf" download="SolAndrade.pdf" class="download-link">
+                Here is my CV, take a look!
+            </a>
+            <p class="fix">I'm currently working on this section, visit me again soon!</p>
+        </div>
         <p class="footer">just an ordinary designer</p>
     </div>
 </body>
