--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -55,13 +55,24 @@ nav {
     }
 }
 
-.fix {
+.info {
     margin-top: 20%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
-    font: 400 16px Inter, sans-serif;
-    color: black;
+    gap: 100px;
+
+    .download-link {
+        font: 400 26px Inter, sans-serif;
+        color: black;
+        text-decoration: none;
+    }
+
+    .fix {
+        font: 400 16px Inter, sans-serif;
+        color: black;
+    }
 }
 
 .footer {
