--- a/src/app/my-works/project/project.component.css
+++ b/src/app/my-works/project/project.component.css
@@ -31,7 +31,7 @@ nav {
     bottom: 0;
     gap: 30px;
     margin-bottom: 30px;
-    z-index: 4;
+    z-index: 3;
 }
 
 .disabled {
@@ -48,7 +48,7 @@ nav {
 
 .main-view {
     display: flex;
-    z-index: 1;
+    z-index: 5;
     width: 100%;
     justify-content: space-between;
 
@@ -161,8 +161,11 @@ nav {
     align-items: flex-end;
 
     img {
-        width: 100%;
-        height: auto;
+        width: 50vw;
+        height: 100vh;
+        max-width: 100%;
+        display: block;
+        margin: 0 auto;
     }
 }
 
