--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,8 +21,9 @@ header > * {
     justify-content: center;
     align-items: center;
 
-    a {
-        color: black;
-        text-decoration: none;
-    }
+}
+
+.brand a {
+    color: black;
+    text-decoration: none;
 }
